Couple more styling fixes! Fixes padding for Cortex brand logo on smaller-width screens, and removes extraneous row on new/edit Credentials view

--- a/app/assets/stylesheets/states/users.facets.scss
+++ b/app/assets/stylesheets/states/users.facets.scss
@@ -7,6 +7,7 @@
 
   .actions-and-search {
     @extend .row;
+    margin-bottom: $standard-margin;
 
     .manipulate-actions {
       @include make-md-column(8);
